# dirichlet

./: .gitignore  .rsync-project  CHANGELOG.md  ChangeLog.md  ChangeLog.org  LICENSE  README.md  README.org  dirichlet.cabal  flake.nix  hie.yaml  stack.yaml
src/Statistics/Distribution/: Dirichlet.hs
test/Statistics/Distribution/: DirichletSpec.hs
