cabal-version:       >=1.10

name:                dirichlet
version:             0.1.0.0
synopsis:            Multivariate dirichlet distribution
-- description:
homepage:            https://github.com/dschrempf/dirichlet
bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Dominik Schrempf
maintainer:          dominik.schrempf@gmail.com
-- copyright:
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Statistics.Distribution.Dirichlet
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15,
                       log-domain,
                       math-functions,
                       mwc-random,
                       primitive,
                       vector
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite dirichlet-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base >=4.14 && <4.15
